--- a/style.css
+++ b/style.css
@@ -13,11 +13,16 @@ body {
   padding: 0;
 }
 
+.image{
+  -webkit-filter: ;
+}
+
 .legend{
   background-color: rgb(255, 255, 255);
   opacity: 80%;
   margin: 10px;
   padding: 10px;
+  color: #FD5E24;
 }
 
 .legendtitle{
